fix relative column height and overflow

--- a/frontend/src/app/relative-column/relative-column.component.scss
+++ b/frontend/src/app/relative-column/relative-column.component.scss
@@ -5,8 +5,8 @@
     background: $color-secondary;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
     
-    height: 860px;
     width: 225px;
+    bottom: 20px;
     margin-right: 20px;
     
     .session-list {
@@ -15,6 +15,7 @@
         margin: 0;
         position: relative;
         z-index: 1;
+        overflow: auto;
         
         li {
             margin-bottom: 10px;
